[package]
name = "osm_to_s3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
log = "0.4.20"
rust-s3 = { version = "0.33.0", features = ["with-tokio"] }
serde = { version = "1.0.188", features = ["derive"] }
tokio = { version = "1.32.0", features = ["full"] }
toml = "0.8.0"
walkdir = "2.4.0"
zip = "0.6.6"
